add ending to game

--- a/data/location/EastWild.json
+++ b/data/location/EastWild.json
@@ -1,15 +1,19 @@
 {
-   "name": "EastWild",
-   "title": "Wilderness (East)",
-   "description": "in the wilderness. East of your home. It's vast, cold, and isolated.",
-   "image": "Wilderness",
-   "exits": [
+  "name": "EastWild",
+  "title": "Wilderness (East)",
+  "description": "in the wilderness. East of your home. It's vast, cold, and isolated.",
+  "image": "Wilderness",
+  "exits": [
     {
-        "name": "west",
-        "room": "Home"
-     }
-    ],
+      "name": "west",
+      "room": "Home"
+    },
+    {
+      "name": "east",
+      "room": "Forest"
+    }
+  ],
   "npcs": [
     "Ibex"
   ]
- }
+}
